# colang

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Llvm.h  Makefile  NOTICE.md  README.md  asmer.cpp  asmer.h  ast_new.md  ast_struct.md  auto_tests_asmer.sh  auto_tests_compiler.sh  auto_tests_linker.sh  colang.cpp  colang.h  compiler.cpp  do.cpp  do.h  linker.cpp  tests_asmer.sh  tests_compiler.sh  tests_linker.sh  单元测试.md  语法规则.md  运算规则.md
asm/: AsmGen.cpp  AsmGen.h  AsmGenFunc.cpp  AsmGenReg.cpp  AsmGenStore.cpp  AsmGenVar.cpp  CMakeLists.txt  Expression.cpp  Internal.cpp  Internal.h  Package.cpp  Parser.cpp  README.md  Statement.cpp
asmer/: Asmer.cpp  Asmer.h  AsmerInstruct.cpp  AsmerText.cpp  CMakeLists.txt  ElfFile.c  ElfFile.cpp  ElfFile.h  ElfFileBuild.cpp  Instruct.cpp  asmer.cpp
asmer/asmer/: Asmer.cpp  Asmer.h  CMakeLists.txt
asmer/ast/: Instruct.cpp  Instruct.h  Sym.cpp  Sym.h  SymTable.cpp  SymTable.h  Token.cpp
asmer/elf/: CMakeLists.txt  elf.h
asmer/instruct/: CMakeLists.txt  Instruct.cpp  Instruct.h  InstructBuild.cpp
asmer/parser/: Parser.cpp  Parser.h  ParserInstruct.cpp  ParserKeyword.cpp  ParsreFunction.cpp  Scanner.cpp  Scanner.h
ast/: Ast.cpp  Ast.h  CMakeLists.txt  Context.cpp  Context.h  Expression.h  Function.h  README.md  Runtime.cpp  Runtime.h  Statement.h  Token.h  Value.cpp  Value.h
colib/: CMakeLists.txt  Value.c.s  std_malloc.c.s  std_printf.c.s  sweep.c.s  sys_sleep.s
compiler/: AsmGen.cpp  AsmGenFunc.cpp  AsmGenReg.cpp  AsmGenStore.cpp  AsmGenVar.cpp  CMakeLists.txt  Compiler.cpp  Compiler.h  CompilerCast.cpp  CompilerFunc.cpp  CompilerStruct.cpp  CompilerVar.cpp  Expression.cpp  Internal.cpp  Parser.cpp  README.md  Statement.cpp  compiler.cpp
compiler/asm/: AsmGen.cpp  AsmGen.h  CMakeLists.txt  (+6 more)
crt/: Array.c.s  Fmt.c.s  Int.c.s  Object.c.s  gc.c.s  std_entry.s  std_malloc.c.s  std_printf.c.s  std_stdio.s  std_string.c.s  std_type.s  type.c  type.h
demo/: test.do
demos/: rt_net_http.co  st_chain.co
docs/: ast_package.md  ast_struct.md
gc/: Array.c  CMakeLists.txt  Hugmem.c  Makefile  README.md  gc.c  gc.h  gc_test.c  list.c  list.h  mark_sweep.c  sweep.c  test.c
internal/: Array.c  Array.h  Array_test.c  Ast.h  CMakeLists.txt  Calculate.c  Calculate.h  CoreValue.c  CoreValue.h  Fmt.c  Int.c  Makefile  Map.c  Map.h  Map_test.c  Object.c  Object.h  String.c  String.h  String_test.c  Value.c  Value.h  cmp.c  fmt.c  gcmalloc.c  gcmalloc.h  object.c  string.c  string.h  string_test.c  test.c  testhelp.h
interpreter/: CMakeLists.txt  Expression.cpp  Interpreter.cpp  Interpreter.h  Statement.cpp
lib/: CMakeLists.txt  Log.cpp  Utils.cpp  Utils.h
linker/: CMakeLists.txt  ElfFile.cpp  ElfFile.h  Linker.cpp  Linker.h  elf.h  linker.cpp
llvm/: Compiler.h  CompilerFunc.cpp  CompilerStruct.cpp  CompilerVar.cpp  Context.cpp  Context.h  Expression.cpp  Expression.h  Runtime.cpp  Runtime.h  Statement.cpp  Statement.h  Utils.cpp  Utils.h
parser/: CMakeLists.txt  Package.cpp  Package.h  Parser.cpp  Parser.h  ParserData.cpp  ParserExpression.cpp  ParserKeyword.cpp  ParserStatement.cpp  ParserToken.cpp  README.md
pkg/: CMakeLists.txt  Log.h  Utils.cpp  Utils.h
runtime/: Builtin.cpp  Builtin.h  CMakeLists.txt  Context.cpp  Context.h  Runtime.cpp  Runtime.h
src/: iostream  string  value
tests/: as_bool.co  assert.sh  auto_tests.sh  auto_tests_asmer.sh  auto_tests_compiler.sh  break.do  continue  continue.do  ds_array.do  ds_array.t  ds_closure.co  ds_func.co  ds_func_type.co  ds_int.co  ds_map.co  ds_map.do  ds_map.do1  ds_object.co  ds_object_func.co  ds_object_member_binary_operator.co  ds_object_member_unary_operator.co  ds_object_split.co  dynamic  function_call  function_call.do  if  if.do  import.do  kw_break.do  kw_continue.do  kw_for.co  kw_global.co  kw_global_int_string.co  kw_global_map_array.co  kw_if.co  kw_if.do  kw_import.do  kw_return.co  kw_return.do  kw_while.co  (+39 more)
(+177 files in other folders)
